# catkin_ws_user

./: GEO-enu_conversion.py  README.md  bluetooth_comandos  ruta.txt
odroid-build/: .catkin_tools.yaml
odroid-build/auto_stop_usr/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
src/: Enlace hacia cmvision_3D  Toolchain-arm-linux-gnueabihf.cmake~
src/auto_stop_ser/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/bluetooth/: CMakeLists.txt  package.xml
src/callback_test/: CMakeLists.txt  package.xml
src/cf_enu/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/cf_enu_conversion/: CMakeLists.txt  package.xml
src/check_scan/: CMakeLists.txt  package.xml
src/cmt/: CMakeLists.txt~  package.xml  package.xml~
src/cmt_test_python/: CMakeLists.txt  package.xml
src/control_xy/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/data_cov/: CMakeLists.txt  package.xml~
src/detect_place/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/detect_place/src/: detect_place.cpp
src/fu_line_detection/: CMakeLists.txt
src/gamepad/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/gps/: CMakeLists.txt~  package.xml  package.xml~
src/heading_follow/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/heading_usr/: CMakeLists.txt  package.xml  package.xml~
src/heading_usr2/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/highway_img/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/lane_detect_python/: CMakeLists.txt  package.xml  package.xml~  scipts
(+224 files in other folders)
